--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ResFood</string>
+    <string name="default_web_client_id">42375461368-ae5jtfm7voguv8hnqfimn4rmmsmkb51m.apps.googleusercontent.com</string>
 </resources>
