refractor: rank multilanguague

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -742,6 +742,8 @@
     <string name="reward_status_locked">Locked</string>
     <string name="reward_status_available">Available</string>
     <string name="reward_status_claimed">Claimed</string>
+    <string name="home_points">%1$d points</string>
 </resources>
+
 
 
