--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -740,4 +740,5 @@
     <string name="reward_status_locked">Chưa đạt</string>
     <string name="reward_status_available">Có thể nhận</string>
     <string name="reward_status_claimed">Đã nhận</string>
+    <string name="home_points">%1$d điểm</string>
 </resources>
