--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -302,6 +302,13 @@
     <string name="review_anonymous">Người dùng ẩn danh</string>
     <string name="review_out_of_5">trên 5</string>
     <string name="common_send">Gửi</string>
+    <string name="order_review_title">Đánh giá đơn hàng</string>
+    <string name="order_review_subtitle">Hãy đánh giá chất lượng sản phẩm để chúng tôi phục vụ tốt hơn nhé!</string>
+    <string name="order_review_submit_btn">Gửi đánh giá</string>
+    <string name="order_review_success">Đã gửi đánh giá thành công!</string>
+    <string name="order_review_quality_label">Chất lượng món ăn</string>
+    <string name="order_review_comment_label">Đánh giá (Tùy chọn)</string>
+    <string name="order_review_comment_hint">Món ăn thế nào? Hãy chia sẻ cảm nhận...</string>
 
     <!-- Admin Dashboard -->
     <string name="dashboard_welcome_back">CHÀO MỪNG TRỞ LẠI</string>
