feat: Add customer detail dialog and enhance order management with user-specific filtering

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -765,6 +765,11 @@
     <string name="filter_rank_loyal">Loyal</string>
     <string name="filter_rank_diamond">Diamond</string>
     <string name="customer_status_locked">Locked</string>
+    <string name="label_phone">Phone Number</string>
+    <string name="label_address">Default Address</string>
+    <string name="stats_revenue">Total Spending</string>
+    <string name="common_unknown">Unknown</string>
+    <string name="address_empty">No Address</string>
 </resources>
 
 
