--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -27,7 +27,7 @@
     <string name="common_save">Save</string>
     <string name="common_back">Back</string>
     <string name="common_confirm">Confirm</string>
-    <string name="price_format_vnd">%1$dđ</string>
+    <string name="price_format_vnd">%1$sđ</string>
 
 
     <!-- Auth -->
