--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -483,7 +483,7 @@
     <string name="checkout_method_cod">Tiền mặt khi nhận hàng</string>
     <string name="checkout_method_zalopay">Ví ZaloPay</string>
     <string name="checkout_method_momo">Ví MoMo</string>
-    <string name="checkout_security_note">Thanh toán an toàn &amp; bảo mật 100%%</string>
+    <string name="checkout_security_note">Thanh toán an toàn &amp; bảo mật 100%</string>
     <string name="checkout_item_note">Không hành, nhiều nước béo</string>
 
     <!-- Voucher -->
