--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -333,7 +333,7 @@
     <string name="table_guests_format">%1$d Người lớn, %2$d Trẻ em</string>
     
     <!-- Booking -->
-    <string name="booking_success_msg">Đặt bàn thành công! Mã: %1$s</string>
+    <string name="booking_success_msg">Đặt bàn thành công!</string>
     <string name="booking_title">Đặt bàn</string>
     <string name="booking_restaurant_title">Nhà hàng</string>
     <string name="booking_date_time">Ngày &amp; Giờ</string>
